fix timestamp alignment

--- a/app/assets/stylesheets/qwiqq.css.scss
+++ b/app/assets/stylesheets/qwiqq.css.scss
@@ -689,7 +689,7 @@ p.empty-deals{
 
 #post .event .body {
   float: left;
-  margin: 20px;
+  margin: 10px 0px 0px 15px;
   width: 360px;
 }
 
